<resources>
    <string name="app_name">BookManager</string>
    <string name="login">"登录"</string>
    <string name="forgetpsd">"忘记密码?"</string>
    <string name="register">"注册"</string>
    <string name="remberpsd">"记住密码"</string>
    <string name="userrule">"已阅读用户协议，并同意。"</string>
    <string name="phoneaccount">"手机号码"</string>
    <string name="hintpsd">"密码"</string>
    <string name="reshintpsd">3~16位组成（最少三个字母）</string>
    <string name="Getverificationcode">"获取验证码"</string>
    <string name="cationcode">验证码</string>
    <string name="ClickLogin">"已有账号？点击登陆"</string>
    <string name="querenxiugai">"确认修改"</string>
    <string name="backlogin">""返回登录</string>
</resources>