<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/background"
    android:orientation="vertical"
    tools:context=".LoginActivity">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="60dp"
        android:layout_gravity="center"
        android:orientation="vertical">
        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/loginbg"
            android:gravity="center"/>
        <TextView
            android:id="@+id/ironTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="20sp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:orientation="vertical">
        <EditText
            android:id="@+id/AccountText"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="70dp"
            android:ems="10"
            android:hint="@string/phoneaccount"
            android:drawableLeft="@mipmap/account"
            android:drawablePadding="10dp"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/PasswordText"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_marginTop="25dp"
                android:ems="10"
                android:hint="@string/reshintpsd"
                android:drawableLeft="@mipmap/password"
                android:drawablePadding="10dp"
                android:inputType="textPassword"
                />

            <TextView
                android:id="@+id/ShowButton"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:background="@drawable/eye_bg"
                android:layout_marginTop="40dp"
                android:layout_alignParentEnd="true"
                />
        </RelativeLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/SMS_Code"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_marginTop="30dp"
                android:ems="10"
                android:hint="@string/cationcode"
                android:textSize="16dp"
                android:inputType="textPersonName"
                android:paddingLeft="10dp" />

            <Button
                android:id="@+id/GetCode"
                android:layout_width="140dp"
                android:layout_height="40dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/cationcode"
                android:text="@string/Getverificationcode"
                android:textSize="18dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">
            <Button
                android:id="@+id/registerButton"
                android:layout_width="115dp"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/button_bg"
                android:gravity="center"
                android:text="@string/register"
                android:textSize="26dp" />
        </LinearLayout>

<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/LoginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/ClickLogin"
        android:textSize="15dp"
        android:paddingStart="160dp"/>
</LinearLayout>

    </LinearLayout>
</LinearLayout>