<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/background"
    android:orientation="vertical"
    tools:context=".LoginActivity">
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:layout_marginTop="60dp"
    android:layout_gravity="center"
    android:orientation="vertical">
    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/loginbg"
        android:gravity="center"/>
    <TextView
        android:id="@+id/ironTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="20sp"
        />
</LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:orientation="vertical">
        <EditText
            android:id="@+id/AccountText"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="70dp"
            android:ems="10"
            android:hint="手机号码"
            android:drawableLeft="@mipmap/account"
            android:drawablePadding="10dp"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

       <RelativeLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal">
           <EditText
               android:id="@+id/PasswordText"
               android:layout_width="300dp"
               android:layout_height="50dp"
               android:layout_marginTop="25dp"
               android:ems="10"
               android:hint="密码"
               android:drawableLeft="@mipmap/password"
               android:drawablePadding="10dp"
               android:inputType="textPassword"
                />

           <TextView
               android:id="@+id/ShowButton"
               android:layout_width="25dp"
               android:layout_height="25dp"
               android:background="@drawable/eye_bg"
               android:layout_marginTop="40dp"
               android:layout_alignParentEnd="true"
               />
       </RelativeLayout>
        <CheckBox
            android:id="@+id/remberpsd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remberpsd"
            android:layout_marginTop="5dp"
            >
        </CheckBox>
      <LinearLayout
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center">
          <Button
              android:id="@+id/LoginButton"
              android:layout_width="115dp"
              android:layout_height="40dp"
              android:layout_marginTop="20dp"
              android:background="@drawable/button_bg"
              android:gravity="center"
              android:text="@string/login"
              android:textSize="26dp" />
      </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/FindPasswordButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/forgetpsd"
                android:textColor="@color/resandfpsd"
                android:textSize="15sp"
              />

            <TextView
                android:id="@+id/RegisterButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textColor="@color/resandfpsd"
                android:paddingStart="200dp"
                android:text="@string/register"
                android:textSize="15sp"
                />
        </LinearLayout>
       <LinearLayout
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:paddingTop="150dp"
           android:layout_gravity="center">
           <CheckBox
               android:id="@+id/userrule"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_gravity="center"
               android:text="@string/userrule"
               android:textSize="12dp">
           </CheckBox>
       </LinearLayout>
    </LinearLayout>
</LinearLayout>